--- a/client/main.html
+++ b/client/main.html
@@ -38,7 +38,9 @@
 <body>
   <div class = "navbar">
     {{> logo}}<br>
-    {{> loginButtons align="left"}}
+    {{> loginButtons align="left"}}<br>
+    {{> Cropper}}
+    {{> TextFactory}}
   </div>
   <div class = "pageContent">
     {{> frame}}
@@ -48,8 +50,6 @@
 <template name="frame">
   {{> PreviewCanvas}}
   <div class = "subContent">
-    {{> Cropper}}
-    {{> TextFactory}}
     {{> ImageSelector}}
     {{> Emailer}}
   </div>
@@ -63,7 +63,7 @@
 </template>
 
 <template name="PreviewCanvas">
-  <canvas id="myCanvas" height=715 width = 450 data-left=0 data-top=0></canvas>
+  <canvas id="myCanvas" height=715 width = 450 data-left=0 data-top=0 data-cropperInc=10></canvas>
   <input id="inp" type='file'>
   <img id="img" width=0 height=0>
 </template>
