clarify in comments on seo section

--- a/client/main.html
+++ b/client/main.html
@@ -31,7 +31,7 @@
   <meta name="twitter:title" content="Make Memes and PostCards">
   <meta name="twitter:description" content="Make Memes and PostCards">
   <meta name="twitter:image" content="NONE">
-
+  <!-- Note:: All Content in head is for SEO not OAuth!-->
   <link rel="shortcut icon" type="image/png" href="http://krewn.github.io/smile.png" />
 </head>
 
