--- a/client/main.html
+++ b/client/main.html
@@ -56,9 +56,9 @@
 </template>
 
 <template name = "Emailer">
-  <form action="TODO">
-  Email: <input type="email" name="email"><br>
-  <input type="submit" value="Send it!">
+  <form class="emailer">
+    Email: <input type="email" name="email"><br>
+    <input type="submit" value="Send it!">
 </form>
 </template>
 
@@ -69,7 +69,7 @@
 </template>
 
 <template name = "Cropper">
-  <h3>Crop</h3>
+  <h3>Tools</h3>
   <table style="width:100%">
     <tr>
       <td></td>
@@ -79,7 +79,7 @@
     </tr>
     <tr>
       <td width="25%" height="25%" class = "leftPlus">+</td>
-      <td></td>
+      <td class = "leftPlus">Refresh</td>
       <td></td>
       <td width="25%" height="25%" class = "rightPlus">+</td>
     </tr>
@@ -118,7 +118,7 @@
     <input id="LeftMargin" type="number" name="LeftMargin" value=15>
     <br>
     TopMargin:<br>
-    <input id="TopMargin" type="number" name="TopMargin" value=15>
+    <input id="TopMargin" type="number" name="TopMargin" value=50>
     <br><br>
   </form>
 </template>
