fix text redraw on alpha and added td hovor color for ui

--- a/client/main.html
+++ b/client/main.html
@@ -79,7 +79,7 @@
     </tr>
     <tr>
       <td width="25%" height="25%" class = "leftPlus">+</td>
-      <td class = "leftPlus">Refresh</td>
+      <td class = "refresh">Refresh</td>
       <td></td>
       <td width="25%" height="25%" class = "rightPlus">+</td>
     </tr>
