--- a/client/main.html
+++ b/client/main.html
@@ -47,7 +47,6 @@
 </body>
 
 <template name="frame">
-  {{> PreviewCanvas}}
   <div class = "subContent">
     {{> TextFactory}}
     {{> ImageSelector}}
@@ -79,7 +78,7 @@
     </tr>
     <tr>
       <td width="25%" height="25%" class = "leftPlus">+</td>
-      <td class = "refresh">Refresh</td>
+      <td class = "refresh" colspan="2" rowspan="2" >{{> PreviewCanvas}}</td>
       <td></td>
       <td width="25%" height="25%" class = "rightPlus">+</td>
     </tr>
