change ui labels

--- a/client/main.html
+++ b/client/main.html
@@ -69,7 +69,7 @@
 </template>
 
 <template name = "Cropper">
-  <h3>Preview / Cropping -- Click the image to refresh.</h3>
+  <h3>Preview / Cropping</h3>
   <table style="width:100%">
     <tr>
       <td></td>
@@ -105,7 +105,7 @@
 <template name = "TextBox">
   <form id="TextBox">
     Text:<br>
-    <input id="TextContent" type="text" name="Text" value="Your Message">
+    <input id="TextContent" type="text" name="Text" value="Click Image to Refresh">
     <br>
     Width:<br>
     <input id="TextWidth" type="number" name="TextWidth" value=250>
