--- a/client/main.html
+++ b/client/main.html
@@ -127,7 +127,7 @@
 
 <template name="logo">
   <div class="list-group" style="float: right;">
-				<a class="button" href="https://krewn.github.io">Kevin</a>
+				<a class="button" href="https://krewn.github.io">Kevin Nelson</a>
 				<a href="https://github.com/krewn" class="icon-link"><i class="fa fa-github fa-2x"></i></a>
 				<a href="https://www.linkedin.com/in/kevin-nelson-0a499980" class="icon-link"><i class="fa fa-linkedin fa-2x"></i></a>
 				<a href="https://www.facebook.com/Kevinb867" class="icon-link"><i class="fa fa-facebook fa-2x"></i></a>
