add text color and update backlog

--- a/client/main.html
+++ b/client/main.html
@@ -138,7 +138,8 @@
             <option value="Courier New">Courier New</option>
           </select><br>
           Size:<br>
-          <input id="FontSize_Seletor" type="number" name="FontSize" value=28>
+          <input id="FontSize_Seletor" type="number" name="FontSize" value=28><br>
+          Color:<input id="FontColor_Seletor" type="color" name="FontColor" value="#12345">
         </td>
       </tr>
     </table>
